# Clubosphere-sd

./: .gitignore  README.md  admin.html  club.html  gpl-3.0.txt  index.html  login.html  pyproject.toml  run.py  signin.html  styles.css  styles_other.css  users.html
app/: __init__.py
app/Routes/api/: admin_api.py  user_api.py
app/Routes/pages/: dynamicPages.py  dynamic_pages.py  static_pages.py
app/db/: mongoConnector.py  mongo_connector.py
app/models/: crypto.py  dataCheck.py  data_checks.py  defined_data.py
app/repository/users/: modify_users.py  retrieveUsers.py  retrieve_users.py
app/services/utilisateurs/: login.py  register.py  userHandle.py  user_handle.py
app/static/css/: club.css  mobile_support.css  styles.css
app/static/js/: csrf.js  login.js  nav.js  navbar.js  particles.js  signin.js  toasty.js
app/templates/: about.html  base.html  club.html  clubs.html  index.html  login.html  profile.html  signin.html
app/templates/admin/: admin.html  users.html
docker/: Dockerfile  docker-compose.yml
docs/: participer.md  setup.md
